tests/paczka1/small_fuzzy/49004533.err
Error in line 3: PkXDhpwMFSD A91 81,52
Error in line 1: JFw41CK A788 82,0
Error in line 4: JFw41CK S77 60,6
Error in line 6: JFw41CK A788 95,0
Error in line 8: 6e9Y A788 65,5
Error in line 14: VZ5fPkI A788 62,2
